# ROM_AM

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
DATA/: training_data.csv
DATA/1D_solid_newm_mass_1000_4/: Ec_1D.npy  Em_1D.npy  pist_pressure_1D.npy  sol_accel_1D.npy
DATA/Fsi_Results/: Ep.npy  Imp_fl.npy  nln_Ec.npy  nln_Em.npy  nln_Ep.npy  nln_Imp_fl.npy  nln_delta_t.npy  nln_fl_velocity_end.npy  nln_pist_pressure.npy  nln_sol_accel.npy  (+1 more)
examples/: 1D_Solid_fsi_test_case.ipynb  Affine DMD on fsi test case.ipynb  Cylinder.ipynb  DMDc on an ustable linear system.ipynb  DMDc on heat equation.ipynb  Kernel DMD with Control.ipynb  Koopman.ipynb  Koopman_testing.ipynb  Motor_torque.ipynb  Num_Tests.ipynb  ParDMD.ipynb  Partitioned_fsi_ROM.ipynb  Piezo_Simul_Reduction.ipynb  ReductionDemo.ipynb  Untitled1.ipynb  cntxt.py  doe_test.ipynb  eDMD Spring.ipynb  eDMD Spring_test.ipynb  export_solid_ROM.ipynb  fsi_test_case.ipynb  heat.py  init_cond.npy  saved_model.pth  strongly_coupled_case.ipynb  surface_appr.ipynb
rom_am/: __init__.py  cnvxdmd.py  dmd.py  dmdc.py  edmd.py  fluid_hybrid_surrogate.py  fluid_surrogate.py  gpardmd.py  hodmd.py  kerdmd.py  kerdmdc.py  knndmd.py  mandmd.py  moving_fluid_surrogate.py  pardmd.py  parrom.py  pod.py  quad_man.py  rdmdc.py  rom.py  rpod.py  solid_rom.py  tracked_fluid_surrogate.py  utils.py
rom_am/pybind_test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ex4  example.cpp  example2.cpp  example3.cpp  example4.cpp  setup.py  test.py
tests/: helpers.py  test_dmd.py  test_dmdc.py  test_edmd.py  test_hodmd.py  test_kerdmd.py  test_tracked_surrogate.py  test_utils.py
(+120 files in other folders)
